Switch from new Float() to Float.valueOf().
Float constructors are deprecated as of java 10: https://docs.oracle.com/javase/10/docs/api/java/lang/Float.html#%3Cinit%3E(float)